# anchor-d21

./: .gitignore  Anchor.toml  README.md  coverage.json  tarpaulin-report.html
.program_client/: Cargo.toml
.program_client/src/: lib.rs
frontend/src/components/: AppBar.tsx  Main.tsx  WalletProtector.tsx  d21.json  d21.ts
frontend/src/pages/: d21.tsx
frontend/src/views/: index.tsx
frontend/src/views/d21/: index.tsx
programs/d21/: Cargo.toml
programs/d21/fuzz/: Cargo.toml
programs/d21/src/: errors.rs  lib.rs
programs/d21/src/instructions/: add_subject.rs  add_voter.rs  initialize.rs  mod.rs  vote.rs
tests/: addSubject.ts  addVoter.ts  common.ts  index.ts  initialize.ts  vote.ts
trdelnik-tests/: Cargo.toml
trdelnik-tests/fuzz-tests/: fuzz_test.rs  fuzz_test_1.rs  fuzz_test_2.rs
trdelnik-tests/tests/: add_subject.rs  add_voter.rs  common.rs  initialization.rs  vote.rs
trdelnik-tests/tests/common/: mod.rs
