[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
tokio = "~1.14.1"
# trdelnik-client = { git = "https://github.com/reastyn/trdelnik", branch = "feature/rust-validator" }
trdelnik-client = { path = "../../trdelnik/crates/client", version = "0.6.0" }
rand = "0.8.5"
async-trait = "0.1.68"
trdelnik-fuzz = { path = "../../trdelnik/crates/fuzz", version = "0.1.0" }

[dependencies.program_client]
path = "../.program_client"

[dependencies.d21]
path = "../programs/d21"

[[bin]]
name = "fuzz_test"
path = "fuzz-tests/fuzz_test.rs"
test = false
doc = false
            